--- a/prepros.cfg
+++ b/prepros.cfg
@@ -42,11 +42,11 @@
           "output": "css/style-dist.css",
           "name": "style.css",
           "category": "CSS",
-          "autoCompile": false,
+          "autoCompile": true,
           "sourceMaps": false,
           "compress": true,
           "cssnext": false,
-          "autoprefixer": false,
+          "autoprefixer": true,
           "customOutput": false,
           "imported": false,
           "parents": [],
@@ -59,7 +59,7 @@
           "name": "style.less",
           "category": "CSS",
           "autoCompile": true,
-          "autoprefixer": false,
+          "autoprefixer": true,
           "compress": false,
           "sourceMaps": false,
           "customOutput": false,
@@ -104,11 +104,11 @@
           "output": "css/variables-dist.css",
           "name": "variables.css",
           "category": "CSS",
-          "autoCompile": false,
+          "autoCompile": true,
           "sourceMaps": false,
           "compress": true,
           "cssnext": false,
-          "autoprefixer": false,
+          "autoprefixer": true,
           "customOutput": false,
           "imported": false,
           "parents": [],
@@ -192,6 +192,128 @@
           "imported": false,
           "parents": [],
           "type": "less"
+        },
+        "1c6c1602": {
+          "id": "1c6c1602",
+          "path": "img/basket-icon.png",
+          "output": "img/basket-icon.png",
+          "name": "basket-icon.png",
+          "category": "IMAGE",
+          "size": 1792,
+          "type": "png",
+          "initialSize": 1792,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2e8f9ea2": {
+          "id": "2e8f9ea2",
+          "path": "README.md",
+          "output": "README.html",
+          "name": "README.md",
+          "category": "HTML",
+          "autoCompile": true,
+          "sanitize": false,
+          "gfm": true,
+          "wrapWithHtml": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "markdown"
+        },
+        "177e6316": {
+          "id": "177e6316",
+          "path": "img/fb_icon.png",
+          "output": "img/fb_icon.png",
+          "name": "fb_icon.png",
+          "category": "IMAGE",
+          "size": 1046,
+          "type": "png",
+          "initialSize": 1046,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5df07eff": {
+          "id": "5df07eff",
+          "path": "img/tw_icon.png",
+          "output": "img/tw_icon.png",
+          "name": "tw_icon.png",
+          "category": "IMAGE",
+          "size": 1224,
+          "type": "png",
+          "initialSize": 1224,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e7bfacd3": {
+          "id": "e7bfacd3",
+          "path": "img/yt_icon.png",
+          "output": "img/yt_icon.png",
+          "name": "yt_icon.png",
+          "category": "IMAGE",
+          "size": 1267,
+          "type": "png",
+          "initialSize": 1267,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "059ac21a": {
+          "id": "059ac21a",
+          "path": "img/pin_icon.png",
+          "output": "img/pin_icon.png",
+          "name": "pin_icon.png",
+          "category": "IMAGE",
+          "size": 1268,
+          "type": "png",
+          "initialSize": 1268,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "204f92c5": {
+          "id": "204f92c5",
+          "path": "img/inst_icon.png",
+          "output": "img/inst_icon.png",
+          "name": "inst_icon.png",
+          "category": "IMAGE",
+          "size": 1223,
+          "type": "png",
+          "initialSize": 1223,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5cf7e162": {
+          "id": "5cf7e162",
+          "path": "css/style-dist.css",
+          "output": "css/style-dist-dist.css",
+          "name": "style-dist.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "61cc5599": {
+          "id": "61cc5599",
+          "path": "img/home.jpg",
+          "output": "img/home.jpg",
+          "name": "home.jpg",
+          "category": "IMAGE",
+          "size": 486069,
+          "type": "jpg",
+          "initialSize": 486069,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
