--- a/prepros.cfg
+++ b/prepros.cfg
@@ -314,6 +314,45 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "c9641e05": {
+          "id": "c9641e05",
+          "path": "img/control-arrow.png",
+          "output": "img/control-arrow.png",
+          "name": "control-arrow.png",
+          "category": "IMAGE",
+          "size": 1161,
+          "type": "png",
+          "initialSize": 1161,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "fb731dff": {
+          "id": "fb731dff",
+          "path": "img/cart-delete-icon.png",
+          "output": "img/cart-delete-icon.png",
+          "name": "cart-delete-icon.png",
+          "category": "IMAGE",
+          "size": 1067,
+          "type": "png",
+          "initialSize": 1067,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "39a4217b": {
+          "id": "39a4217b",
+          "path": "img/cart-delete-hover-icon.png",
+          "output": "img/cart-delete-hover-icon.png",
+          "name": "cart-delete-hover-icon.png",
+          "category": "IMAGE",
+          "size": 1007,
+          "type": "png",
+          "initialSize": 1007,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
