--- a/prepros.cfg
+++ b/prepros.cfg
@@ -353,6 +353,19 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "2f362aa8": {
+          "id": "2f362aa8",
+          "path": "img/search-button-icon.png",
+          "output": "img/search-button-icon.png",
+          "name": "search-button-icon.png",
+          "category": "IMAGE",
+          "size": 1119,
+          "type": "png",
+          "initialSize": 1119,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
