--- a/prepros.cfg
+++ b/prepros.cfg
@@ -366,6 +366,19 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "dd2aa952": {
+          "id": "dd2aa952",
+          "path": "img/arrow-list.png",
+          "output": "img/arrow-list.png",
+          "name": "arrow-list.png",
+          "category": "IMAGE",
+          "size": 1050,
+          "type": "png",
+          "initialSize": 1050,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
