--- a/prepros.cfg
+++ b/prepros.cfg
@@ -80,8 +80,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "bb53beb9",
-            "254f1eee"
+            "bb53beb9"
           ],
           "type": "less"
         },
@@ -113,85 +112,6 @@
           "imported": false,
           "parents": [],
           "type": "css"
-        },
-        "dbe3bb12": {
-          "id": "dbe3bb12",
-          "path": "css/responsive-slider.css",
-          "output": "css/responsive-slider-dist.css",
-          "name": "responsive-slider.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "1c97c9de": {
-          "id": "1c97c9de",
-          "path": "js/responsive-slider.js",
-          "output": "js/responsive-slider-dist.js",
-          "name": "responsive-slider.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "64e7f743": {
-          "id": "64e7f743",
-          "path": "js/jquery.event.move.js",
-          "output": "js/jquery.event.move-dist.js",
-          "name": "jquery.event.move.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "de5ffe1d": {
-          "id": "de5ffe1d",
-          "path": "js/jquery.js",
-          "output": "js/jquery-dist.js",
-          "name": "jquery.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "254f1eee": {
-          "id": "254f1eee",
-          "path": "less/responsive-slider.less",
-          "output": "css/responsive-slider.css",
-          "name": "responsive-slider.less",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "compress": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "less"
         },
         "1c6c1602": {
           "id": "1c6c1602",
@@ -379,6 +299,80 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "65338e35": {
+          "id": "65338e35",
+          "path": "img/arrow-link.png",
+          "output": "img/arrow-link.png",
+          "name": "arrow-link.png",
+          "category": "IMAGE",
+          "size": 961,
+          "type": "png",
+          "initialSize": 961,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "cc45fbaa": {
+          "id": "cc45fbaa",
+          "path": "img/item-img.png",
+          "output": "img/item-img.png",
+          "name": "item-img.png",
+          "category": "IMAGE",
+          "size": 1373,
+          "type": "png",
+          "initialSize": 1373,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6266f912": {
+          "id": "6266f912",
+          "path": "js/jquery.bxslider.min.js",
+          "output": "js/jquery.bxslider.min-dist.js",
+          "name": "jquery.bxslider.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "94dffd20": {
+          "id": "94dffd20",
+          "path": "css/jquery.bxslider.css",
+          "output": "css/jquery.bxslider-dist.css",
+          "name": "jquery.bxslider.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "7842f6e1": {
+          "id": "7842f6e1",
+          "path": "js/jquery-1.11.1.min.js",
+          "output": "js/jquery-1.11.1.min-dist.js",
+          "name": "jquery-1.11.1.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
