--- a/prepros.cfg
+++ b/prepros.cfg
@@ -373,6 +373,19 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "61596d0b": {
+          "id": "61596d0b",
+          "path": "img/product--slider-arrow.png",
+          "output": "img/product--slider-arrow.png",
+          "name": "product--slider-arrow.png",
+          "category": "IMAGE",
+          "size": 1079,
+          "type": "png",
+          "initialSize": 1079,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
