End html structure

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1623,84 +1623,6 @@
           "height": 0,
           "width": 0
         },
-        "ce636594": {
-          "id": "ce636594",
-          "path": "img/tumbnails/t_5.png",
-          "output": "img/tumbnails/t_5.png",
-          "name": "t_5.png",
-          "category": "IMAGE",
-          "size": 52168,
-          "type": "png",
-          "initialSize": 52168,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "7fbfc4f8": {
-          "id": "7fbfc4f8",
-          "path": "img/tumbnails/t_6.png",
-          "output": "img/tumbnails/t_6.png",
-          "name": "t_6.png",
-          "category": "IMAGE",
-          "size": 29030,
-          "type": "png",
-          "initialSize": 29030,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "307dd93d": {
-          "id": "307dd93d",
-          "path": "img/tumbnails/t_4.png",
-          "output": "img/tumbnails/t_4.png",
-          "name": "t_4.png",
-          "category": "IMAGE",
-          "size": 51264,
-          "type": "png",
-          "initialSize": 51264,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "852322b4": {
-          "id": "852322b4",
-          "path": "img/tumbnails/t_3.png",
-          "output": "img/tumbnails/t_3.png",
-          "name": "t_3.png",
-          "category": "IMAGE",
-          "size": 41953,
-          "type": "png",
-          "initialSize": 41953,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "8030a3fb": {
-          "id": "8030a3fb",
-          "path": "img/tumbnails/t_2.png",
-          "output": "img/tumbnails/t_2.png",
-          "name": "t_2.png",
-          "category": "IMAGE",
-          "size": 40848,
-          "type": "png",
-          "initialSize": 40848,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "1566ce15": {
-          "id": "1566ce15",
-          "path": "img/tumbnails/t_1.png",
-          "output": "img/tumbnails/t_1.png",
-          "name": "t_1.png",
-          "category": "IMAGE",
-          "size": 54008,
-          "type": "png",
-          "initialSize": 54008,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "86e34c11": {
           "id": "86e34c11",
           "path": "js/jquery.prettyPhoto.js",
@@ -2080,6 +2002,209 @@
           "size": 1479,
           "type": "png",
           "initialSize": 1479,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bd4bf813": {
+          "id": "bd4bf813",
+          "path": "sources/prettyPhoto_compressed_3.1.6/index.html",
+          "output": "sources/prettyPhoto_compressed_3.1.6/index.html",
+          "name": "index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "bd97f942": {
+          "id": "bd97f942",
+          "path": "sources/prettyPhoto_compressed_3.1.6/xhr_response.html",
+          "output": "sources/prettyPhoto_compressed_3.1.6/xhr_response.html",
+          "name": "xhr_response.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "8b5018d5": {
+          "id": "8b5018d5",
+          "path": "sources/prettyPhoto_compressed_3.1.6/js/jquery-1.3.2.min.js",
+          "output": "sources/prettyPhoto_compressed_3.1.6/js/jquery-1.3.2.min-dist.js",
+          "name": "jquery-1.3.2.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "d9aa2c4c": {
+          "id": "d9aa2c4c",
+          "path": "sources/prettyPhoto_compressed_3.1.6/js/jquery-1.4.4.min.js",
+          "output": "sources/prettyPhoto_compressed_3.1.6/js/jquery-1.4.4.min-dist.js",
+          "name": "jquery-1.4.4.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "1b5fd2ae": {
+          "id": "1b5fd2ae",
+          "path": "sources/prettyPhoto_compressed_3.1.6/js/jquery-1.6.1.min.js",
+          "output": "sources/prettyPhoto_compressed_3.1.6/js/jquery-1.6.1.min-dist.js",
+          "name": "jquery-1.6.1.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "0301e89a": {
+          "id": "0301e89a",
+          "path": "sources/prettyPhoto_compressed_3.1.6/js/jquery.prettyPhoto.js",
+          "output": "sources/prettyPhoto_compressed_3.1.6/js/jquery.prettyPhoto-dist.js",
+          "name": "jquery.prettyPhoto.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "abfaf42d": {
+          "id": "abfaf42d",
+          "path": "img/thumbnails/t_1.png",
+          "output": "img/thumbnails/t_1.png",
+          "name": "t_1.png",
+          "category": "IMAGE",
+          "size": 54008,
+          "type": "png",
+          "initialSize": 54008,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c1b7f0ab": {
+          "id": "c1b7f0ab",
+          "path": "img/thumbnails/t_2.png",
+          "output": "img/thumbnails/t_2.png",
+          "name": "t_2.png",
+          "category": "IMAGE",
+          "size": 40848,
+          "type": "png",
+          "initialSize": 40848,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "79deb3a0": {
+          "id": "79deb3a0",
+          "path": "img/thumbnails/t_3.png",
+          "output": "img/thumbnails/t_3.png",
+          "name": "t_3.png",
+          "category": "IMAGE",
+          "size": 41953,
+          "type": "png",
+          "initialSize": 41953,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ef9b4fca": {
+          "id": "ef9b4fca",
+          "path": "img/thumbnails/t_4.png",
+          "output": "img/thumbnails/t_4.png",
+          "name": "t_4.png",
+          "category": "IMAGE",
+          "size": 51264,
+          "type": "png",
+          "initialSize": 51264,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2e095b22": {
+          "id": "2e095b22",
+          "path": "img/thumbnails/t_5.png",
+          "output": "img/thumbnails/t_5.png",
+          "name": "t_5.png",
+          "category": "IMAGE",
+          "size": 52168,
+          "type": "png",
+          "initialSize": 52168,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5b244666": {
+          "id": "5b244666",
+          "path": "img/thumbnails/t_6.png",
+          "output": "img/thumbnails/t_6.png",
+          "name": "t_6.png",
+          "category": "IMAGE",
+          "size": 29030,
+          "type": "png",
+          "initialSize": 29030,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d1f04650": {
+          "id": "d1f04650",
+          "path": "img/fb-icon-big.png",
+          "output": "img/fb-icon-big.png",
+          "name": "fb-icon-big.png",
+          "category": "IMAGE",
+          "size": 1246,
+          "type": "png",
+          "initialSize": 1246,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c378cfad": {
+          "id": "c378cfad",
+          "path": "img/tw-icon-big.png",
+          "output": "img/tw-icon-big.png",
+          "name": "tw-icon-big.png",
+          "category": "IMAGE",
+          "size": 2017,
+          "type": "png",
+          "initialSize": 2017,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b9a1eefa": {
+          "id": "b9a1eefa",
+          "path": "img/pin-icon-big.png",
+          "output": "img/pin-icon-big.png",
+          "name": "pin-icon-big.png",
+          "category": "IMAGE",
+          "size": 2721,
+          "type": "png",
+          "initialSize": 2721,
           "optimized": false,
           "height": 0,
           "width": 0
