--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2208,6 +2208,84 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "22a10481": {
+          "id": "22a10481",
+          "path": "img/card1-pic.png",
+          "output": "img/card1-pic.png",
+          "name": "card1-pic.png",
+          "category": "IMAGE",
+          "size": 2731,
+          "type": "png",
+          "initialSize": 2731,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "636eca6a": {
+          "id": "636eca6a",
+          "path": "img/card2-pic.png",
+          "output": "img/card2-pic.png",
+          "name": "card2-pic.png",
+          "category": "IMAGE",
+          "size": 2567,
+          "type": "png",
+          "initialSize": 2567,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "63c7a264": {
+          "id": "63c7a264",
+          "path": "img/card3-pic.png",
+          "output": "img/card3-pic.png",
+          "name": "card3-pic.png",
+          "category": "IMAGE",
+          "size": 2615,
+          "type": "png",
+          "initialSize": 2615,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e3b8ca97": {
+          "id": "e3b8ca97",
+          "path": "img/card4-pic.png",
+          "output": "img/card4-pic.png",
+          "name": "card4-pic.png",
+          "category": "IMAGE",
+          "size": 2003,
+          "type": "png",
+          "initialSize": 2003,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6377bd03": {
+          "id": "6377bd03",
+          "path": "img/card5-pic.png",
+          "output": "img/card5-pic.png",
+          "name": "card5-pic.png",
+          "category": "IMAGE",
+          "size": 1872,
+          "type": "png",
+          "initialSize": 1872,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e3f8081a": {
+          "id": "e3f8081a",
+          "path": "img/card6-pic.png",
+          "output": "img/card6-pic.png",
+          "name": "card6-pic.png",
+          "category": "IMAGE",
+          "size": 1979,
+          "type": "png",
+          "initialSize": 1979,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
