Almost finished HOme page

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -303,19 +303,6 @@
           "parents": [],
           "type": "css"
         },
-        "61cc5599": {
-          "id": "61cc5599",
-          "path": "img/home.jpg",
-          "output": "img/home.jpg",
-          "name": "home.jpg",
-          "category": "IMAGE",
-          "size": 486069,
-          "type": "jpg",
-          "initialSize": 486069,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "c9641e05": {
           "id": "c9641e05",
           "path": "img/control-arrow.png",
@@ -2286,6 +2273,67 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "e6a27133": {
+          "id": "e6a27133",
+          "path": "img/item1-img.png",
+          "output": "img/item1-img.png",
+          "name": "item1-img.png",
+          "category": "IMAGE",
+          "size": 66653,
+          "type": "png",
+          "initialSize": 66653,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "308e9495": {
+          "id": "308e9495",
+          "path": "js/owl.carousel.js",
+          "output": "js/owl.carousel-dist.js",
+          "name": "owl.carousel.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "e4da40ef": {
+          "id": "e4da40ef",
+          "path": "css/owl.carousel.css",
+          "output": "css/owl.carousel-dist.css",
+          "name": "owl.carousel.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "2e889060": {
+          "id": "2e889060",
+          "path": "css/owl.theme.css",
+          "output": "css/owl.theme-dist.css",
+          "name": "owl.theme.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
