--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2334,6 +2334,38 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "e4e46844": {
+          "id": "e4e46844",
+          "path": "css/flexnav.css",
+          "output": "css/flexnav-dist.css",
+          "name": "flexnav.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "5851be3a": {
+          "id": "5851be3a",
+          "path": "js/jquery.flexnav.min.js",
+          "output": "js/jquery.flexnav.min-dist.js",
+          "name": "jquery.flexnav.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
