Start contact page

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2366,6 +2366,17 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "29c7c76a": {
+          "id": "29c7c76a",
+          "path": "contact.html",
+          "output": "contact.html",
+          "name": "contact.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
