Finished contact page

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -161,7 +161,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "bb53beb9"
+            "bb53beb9",
+            "34bcef51"
           ],
           "type": "less"
         },
@@ -2377,6 +2378,91 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "34bcef51": {
+          "id": "34bcef51",
+          "path": "less/contact.less",
+          "output": "css/contact.css",
+          "name": "contact.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "bb53beb9"
+          ],
+          "type": "less"
+        },
+        "89befa6c": {
+          "id": "89befa6c",
+          "path": "css/contact.css",
+          "output": "css/contact-dist.css",
+          "name": "contact.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "629a6955": {
+          "id": "629a6955",
+          "path": "img/contact__page-map.png",
+          "output": "img/contact__page-map.png",
+          "name": "contact__page-map.png",
+          "category": "IMAGE",
+          "size": 396412,
+          "type": "png",
+          "initialSize": 396412,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "461f6fb1": {
+          "id": "461f6fb1",
+          "path": "img/location-icon.png",
+          "output": "img/location-icon.png",
+          "name": "location-icon.png",
+          "category": "IMAGE",
+          "size": 1151,
+          "type": "png",
+          "initialSize": 1151,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "3deca547": {
+          "id": "3deca547",
+          "path": "img/phone-icon.png",
+          "output": "img/phone-icon.png",
+          "name": "phone-icon.png",
+          "category": "IMAGE",
+          "size": 1106,
+          "type": "png",
+          "initialSize": 1106,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e2ee2a8a": {
+          "id": "e2ee2a8a",
+          "path": "img/email-icon.png",
+          "output": "img/email-icon.png",
+          "name": "email-icon.png",
+          "category": "IMAGE",
+          "size": 1115,
+          "type": "png",
+          "initialSize": 1115,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
